cmake_minimum_required(VERSION 3.25)
project(cpp)

set(CMAKE_CXX_STANDARD 14)

include_directories(cpp00/ex01)
include_directories(cpp00/tmp/examens/CPP_Module_01)
include_directories(cpp00/tmp/examens/CPP_Module_02)
include_directories(cpp00/tmp/examens/CPP_Module_03)
include_directories(cpp00/tmp/examens/s1)
include_directories(cpp00/tmp/examens/s2)
include_directories(cpp00/tmp/examens/s3)
include_directories(cpp00/tmp/Module00/ex01)
include_directories(cpp00/tmp/Module00/ex02)
include_directories(cpp00/tmp/Module01/ex00)
include_directories(cpp00/tmp/Module01/ex01)
include_directories(cpp00/tmp/Module01/ex03)
include_directories(cpp00/tmp/Module01/ex04)
include_directories(cpp00/tmp/Module01/ex05)
include_directories(cpp00/tmp/Module01/ex06)
include_directories(cpp00/tmp/Module02/ex00)
include_directories(cpp00/tmp/Module02/ex01)
include_directories(cpp00/tmp/Module02/ex02)
include_directories(cpp00/tmp/Module03/ex00)
include_directories(cpp00/tmp/Module03/ex01)
include_directories(cpp00/tmp/Module03/ex02)
include_directories(cpp00/tmp/Module03/ex03)
include_directories(cpp00/tmp/Module04/ex00)
include_directories(cpp00/tmp/Module04/ex01)
include_directories(cpp00/tmp/Module04/ex02)
include_directories(cpp00/tmp/Module04/ex03)
include_directories(cpp00/tmp/Module05/ex00)
include_directories(cpp00/tmp/Module05/ex01)
include_directories(cpp00/tmp/Module05/ex02)
include_directories(cpp00/tmp/Module05/ex03)
include_directories(cpp00/tmp/Module06/ex00)
include_directories(cpp00/tmp/Module06/ex01)
include_directories(cpp00/tmp/Module06/ex02)
include_directories(cpp00/tmp/Module07/ex00)
include_directories(cpp00/tmp/Module07/ex01)
include_directories(cpp00/tmp/Module07/ex02)
include_directories(cpp00/tmp/Module08/ex00)
include_directories(cpp00/tmp/Module08/ex01)
include_directories(cpp00/tmp/Module08/ex02)
include_directories(cpp00/tmp/Module09/ex00)
include_directories(cpp00/tmp/Module09/ex01)
include_directories(cpp00/tmp/Module09/ex02)
include_directories(cpp01/ex00)
include_directories(cpp01/ex01)
include_directories(cpp01/ex03)
include_directories(cpp01/ex04)

add_executable(cpp
        cpp00/cmake-build-debug/Testing/Temporary/LastTest.log
        cpp00/cmake-build-debug/build.ninja
        cpp00/cmake-build-debug/cmake_install.cmake
        cpp00/cmake-build-debug/CMakeCache.txt
        cpp00/ex00/Makefile
        cpp00/ex00/megaphone
        cpp00/ex00/megaphone.cpp
        cpp00/ex00/megaphone.o
        cpp00/ex01/Contact.cpp
        cpp00/ex01/Contact.hpp
        cpp00/ex01/Contact.o
        cpp00/ex01/main.cpp
        cpp00/ex01/main.o
        cpp00/ex01/Makefile
        cpp00/ex01/phonebook
        cpp00/ex01/Phonebook.cpp
        cpp00/ex01/Phonebook.hpp
        cpp00/ex01/Phonebook.o
        cpp00/CMakeLists.txt
        cpp01/ex00/main.cpp
        cpp01/ex00/newZombie.cpp
        cpp01/ex00/randomChump.cpp
        cpp01/ex00/Zombie.cpp
        cpp01/ex00/Zombie.hpp
        cpp01/ex01/main.cpp
        cpp01/ex01/Zombie.cpp
        cpp01/ex01/Zombie.hpp
        cpp01/ex01/zombieHorde.cpp
        cpp01/ex02/main.cpp
        cpp01/ex03/HumanA.cpp
        cpp01/ex03/HumanA.hpp
        cpp01/ex03/HumanB.cpp
        cpp01/ex03/HumanB.hpp
        cpp01/ex03/main.cpp
        cpp01/ex03/Weapon.cpp
        cpp01/ex03/Weapon.hpp
        cpp01/ex04/main.cpp
        cpp01/ex04/sar.cpp
        cpp01/ex04/sar.hpp cpp01/ex05/main.cpp cpp01/ex05/harl.cpp cpp02/ex01/Fixed.cpp cpp02/ex01/main.cpp cpp02/ex02/Fixed.cpp)
